[gd_scene load_steps=16 format=3 uid="uid://ds2o46apd08yu"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_cgih3"]
[ext_resource type="PackedScene" uid="uid://cc6ngdqie8o8c" path="res://addons/godot-xr-tools/effects/vignette.tscn" id="2_ubaj6"]
[ext_resource type="Script" uid="uid://bk30dgn53c8x6" path="res://scripts/player.gd" id="2_wlyo5"]
[ext_resource type="PackedScene" uid="uid://bdwmserhqai5h" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_physics_hand_low.tscn" id="3_rqjhs"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="4_wlyo5"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="5_kktfb"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="6_3746w"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="7_l60dg"]
[ext_resource type="PackedScene" uid="uid://btf05hjpw6k05" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_physics_hand_low.tscn" id="8_kktfb"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="9_3746w"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rqjhs"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wlyo5"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5ycv8"]

[sub_resource type="Sky" id="Sky_m5cqn"]
sky_material = SubResource("ProceduralSkyMaterial_5ycv8")

[sub_resource type="Environment" id="Environment_8eoxv"]
background_mode = 2
sky = SubResource("Sky_m5cqn")

[node name="TestingGround" instance=ExtResource("1_cgih3")]

[node name="XROrigin3D" parent="." index="0"]
script = ExtResource("2_wlyo5")

[node name="Vignette" parent="XROrigin3D/XRCamera3D" index="0" instance=ExtResource("2_ubaj6")]
auto_rotation_limit = 10.0
auto_velocity_limit = 3.0

[node name="LeftPhysicsHand" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("3_rqjhs")]

[node name="MovementDirect" parent="XROrigin3D/LeftHand" index="1" instance=ExtResource("4_wlyo5")]
strafe = true

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" index="2" instance=ExtResource("5_kktfb")]
teleport_button_action = "primary_click"

[node name="ShrinkPointer" parent="XROrigin3D/LeftHand" index="3" instance=ExtResource("6_3746w")]
enabled = false
laser_material = SubResource("StandardMaterial3D_rqjhs")
collision_mask = 5242882

[node name="RightPhysicsHand" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("8_kktfb")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" index="1" instance=ExtResource("9_3746w")]

[node name="GrowPointer" parent="XROrigin3D/RightHand" index="2" instance=ExtResource("6_3746w")]
enabled = false
laser_material = SubResource("StandardMaterial3D_wlyo5")
collision_mask = 5242882

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("7_l60dg")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="1"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]
environment = SubResource("Environment_8eoxv")

[connection signal="button_pressed" from="XROrigin3D/LeftHand" to="XROrigin3D" method="_on_left_hand_button_pressed"]
[connection signal="button_released" from="XROrigin3D/LeftHand" to="XROrigin3D" method="_on_left_hand_button_released"]
[connection signal="button_pressed" from="XROrigin3D/RightHand" to="XROrigin3D" method="_on_right_hand_button_pressed"]
[connection signal="button_released" from="XROrigin3D/RightHand" to="XROrigin3D" method="_on_right_hand_button_released"]
